refactor: Use @graph_sitter (#49)
- **rename to CliSession**
- **update to use @graph_sitter**

---------

Co-authored-by: Codegen Team (Internal) <135641899+codegen-team@users.noreply.github.com>

--- a/docs/building-with-graph-sitter/function-decorator.mdx
+++ b/docs/building-with-graph-sitter/function-decorator.mdx
@@ -1,6 +1,6 @@
 ---
 title: Function Decorator
-sidebarTitle: "@codegen.function"
+sidebarTitle: "@graph_sitter.function"
 icon: "at"
 iconType: "solid"
 ---
@@ -11,17 +11,17 @@ The `function` decorator is used to define codegen functions within your applica
 
 ## Usage
 
-To use the `function` decorator, simply annotate your function with `@codegen.function` and provide a name as an argument.
+To use the `function` decorator, simply annotate your function with `@graph_sitter.function` and provide a name as an argument.
 
 ### Example
 
 ```python
-@codegen.function('my-function')
+@graph_sitter.function('my-function')
 def run(codebase):
     pass
 ```
 
-In this example, the function `run` is decorated with `@codegen.function` and given the name `'my-function'`. This name will be used when the function is ran.
+In this example, the function `run` is decorated with `@graph_sitter.function` and given the name `'my-function'`. This name will be used when the function is ran.
 
 ## Parameters
 
