--- a/docs/building-with-graph-sitter/reusable-codemods.mdx
+++ b/docs/building-with-graph-sitter/reusable-codemods.mdx
@@ -5,7 +5,7 @@ icon: "arrows-rotate"
 iconType: "solid"
 ---
 
-Graph-sitter enables you to create reusable code transformations using Python functions decorated with `@codegen.function`. These codemods can be shared, versioned, and run by your team.
+Graph-sitter enables you to create reusable code transformations using Python functions decorated with `@graph_sitter.function`. These codemods can be shared, versioned, and run by your team.
 
 ## Creating Codemods
 
@@ -18,10 +18,10 @@ gs create rename-function .
 This creates a new codemod in your `.codegen/codemods` directory:
 
 ```python
-import codegen
+import graph_sitter
 from graph_sitter import Codebase
 
-@codegen.function("rename-function")
+@graph_sitter.function("rename-function")
 def run(codebase: Codebase):
     """Add a description of what this codemod does."""
     # Add your code here
@@ -64,15 +64,15 @@ The execution flow:
 
 A codemod consists of three main parts:
 
-1. The `@codegen.function` decorator that names your codemod
+1. The `@graph_sitter.function` decorator that names your codemod
 2. A `run` function that takes a `Codebase` parameter
 3. Your transformation logic using the Codebase API
 
 ```python
-import codegen
+import graph_sitter
 from graph_sitter import Codebase
 
-@codegen.function("update-imports")
+@graph_sitter.function("update-imports")
 def run(codebase: Codebase):
     """Update import statements to use new package names."""
     for file in codebase.files:
@@ -93,7 +93,7 @@ class RenameArgs(BaseModel):
     old_name: str
     new_name: str
 
-@codegen.function("rename-function")
+@graph_sitter.function("rename-function")
 def run(codebase: Codebase, arguments: RenameArgs):
     """Rename a function across the codebase."""
     old_func = codebase.get_function(arguments.old_name)
