--- a/docs/tutorials/training-data.mdx
+++ b/docs/tutorials/training-data.mdx
@@ -31,7 +31,7 @@ First, we will do a "graph expansion" for each function - grab the function's so
 First, let's import the types we need from Codegen:
 
 ```python
-import codegen
+import graph_sitter
 from graph_sitter import Codebase
 from codegen.sdk.core.external_module import ExternalModule
 from codegen.sdk.core.import_resolution import Import
